Added SytemViewController and written necessary exeption for it; fixed MapViewController, fix appeared label when you clicked on the map

--- a/WeatherApp/WeatherApp/en.lproj/Localizable.strings
+++ b/WeatherApp/WeatherApp/en.lproj/Localizable.strings
@@ -19,7 +19,7 @@
 "Min" = "Min";
 "Max" = "Max";
 
-"Temperature" = "Temperature";
+"Temperature" = "Temp";
 "Speed Wind" = "Speed Wind";
 
 "True" = "True";
