--- a/WeatherApp/WeatherApp/ru.lproj/Localizable.strings
+++ b/WeatherApp/WeatherApp/ru.lproj/Localizable.strings
@@ -19,7 +19,7 @@
 "Min" = "Мин";
 "Max" = "Макс";
 
-"Temperature" = "Температура";
+"Temperature" = "Тем";
 "Speed Wind" = "Скорость ветра";
 
 "True" = "Да";
